--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,28 +1,28 @@
 @import "tailwindcss";
-@import "./variables.css";
+
+@theme {
+    --color-carbon-500: #172122;
+    --color-forest-600: #212a29;
+    --color-forest-500: #2a3330;
+    --color-forest-400: #3d443e;
+    --color-olive-600: #64675a;
+    --color-olive-500: #7a7a6c;
+    --color-olive-400: #8f8d7e;
+    --color-tan-500: #bab2a2;
+    --color-ivory-500: #f5f5f5;
+}
 
 :root {
-  font-family: var(--font-stack);
+  font-family: 'Courier New', Courier, monospace;;
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: var(--charcoal-brown);
+  background-color: var(--color-carbon-500);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
 }
 
 body {
