--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,23 +1,26 @@
 @import "tailwindcss";
 
 @theme {
-    --color-carbon-500: #172122;
+    --color-carbon: #172122;
     --color-forest-600: #212a29;
     --color-forest-500: #2a3330;
     --color-forest-400: #3d443e;
     --color-olive-600: #64675a;
     --color-olive-500: #7a7a6c;
     --color-olive-400: #8f8d7e;
-    --color-tan-500: #bab2a2;
-    --color-ivory-500: #f5f5f5;
+    --color-tan-600: #bab2a2;
+    --color-tan-400: #D8D4CC;
+    --color-tan-300: #E7E5E1;
+    --color-ivory: #f5f5f5;
 }
 
 :root {
-  font-family: 'Courier New', Courier, monospace;;
+  font-family: 'Courier New', Courier, monospace;
   line-height: 1.5;
   font-weight: 400;
+  min-height: 100vh;
 
-  background-color: var(--color-carbon-500);
+  background-color: var(--color-carbon);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
