add: skip to year feature, non-album events

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,6 +9,7 @@
     --color-olive-500: #7a7a6c;
     --color-olive-400: #8f8d7e;
     --color-tan-600: #bab2a2;
+    --color-tan-500: #C9C3B7;
     --color-tan-400: #D8D4CC;
     --color-tan-300: #E7E5E1;
     --color-ivory: #f5f5f5;
